kubernetes/templates/up9.K8S.TEMPLATE.yaml
---
# Source: up9/templates/up9-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: up9
  labels:
    name: up9
---
# Source: up9/templates/auth-helper.yaml
apiVersion: v1
kind: Service
metadata:
  name: up9-auth-helper
  namespace: up9
  labels:
    app: up9-auth-helper
spec:
  type: ClusterIP
  ports:
    - name: app
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: up9-auth-helper
---
# Source: up9/templates/injector.yaml
apiVersion: v1
kind: Service
metadata:
  name: up9-sidecar-injector-prod
  namespace: up9
  labels:
    app: up9-sidecar-injector
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  - name: http-metrics
    port: 80
    targetPort: http-metrics
    protocol: TCP
  selector:
    app: up9-sidecar-injector
---
# Source: up9/templates/collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: up9-collector-daemonset
  name: up9-collector-daemonset
  namespace: up9
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: up9-collector-daemonset
  template:
    metadata:
      labels:
        app: up9-collector-daemonset
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: UP9_ENV_SUFFIX
              value: "up9.app"
            - name: PASSIVE_TAPPER_PORT
              value: "25111"
            - name: ENVOY_ADMIN_PORT
              value: "21213"
            - name: CLIENT_ID
              value: "__TMPL_CLIENT_ID__"
            - name: CLIENT_SECRET
              value: "__TMPL_CLIENT_SECRET__"
            - name: AGENT_NAME
              value: "__TMPL_AGENT_NAME__"
            - name: DEFAULT_MODEL
              value: "default"
            - name: UP9_DISABLE_LOGS_STDOUT
              value: "0"
            - name: UP9_DISABLE_LOGS_STDERR
              value: "0"
            - name: UP9_DISABLE_LOGS_CLOUD
              value: "0"
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: spec.nodeName
          image: gcr.io/up9-docker-hub/collector/master:latest
          imagePullPolicy: Always
          name: up9-collector-daemonset
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: up9-service-account
      serviceAccountName: up9-service-account
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
---
# Source: up9/templates/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: up9-test-agent
  name: up9-test-agent
  namespace: up9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: up9-test-agent
  template:
    metadata:
      labels:
        app: up9-test-agent
      namespace: up9
    spec:
      containers:
      - env:
        - name: UP9_ENV_SUFFIX
          value: up9.app
        - name: AGENT_NAME
          value: __TMPL_AGENT_NAME__
        - name: CLIENT_ID
          value: __TMPL_CLIENT_ID__
        - name: CLIENT_SECRET
          value: __TMPL_CLIENT_SECRET__
        - name: AUTH_HELPER_SERVER
          value: up9-auth-helper
        - name: TEST_RUNNER_VERSION
          value: master:latest
        - name: K8S_NAMESPACE
          value: up9
        - name: UP9_DISABLE_LOGS_STDOUT
          value: "0"
        - name: UP9_DISABLE_LOGS_STDERR
          value: "0"
        - name: UP9_DISABLE_LOGS_CLOUD
          value: "0"
        image: gcr.io/up9-docker-hub/trcc-agent/master:latest
        imagePullPolicy: Always
        name: up9-test-agent
      automountServiceAccountToken: true
      serviceAccount: up9-service-account
      serviceAccountName: up9-service-account
---
# Source: up9/templates/auth-helper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: up9-auth-helper
  name: up9-auth-helper
  namespace: up9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: up9-auth-helper
  template:
    metadata:
      labels:
        app: up9-auth-helper
      namespace: up9
    spec:
      containers:
      - image: gcr.io/up9-docker-hub/authentication-helper/master:latest
        imagePullPolicy: Always
        name: up9-auth-helper
---
# Source: up9/templates/injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "up9-sidecar-injector"
  namespace: up9
  labels:
    app: "up9-sidecar-injector"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "up9-sidecar-injector"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: "up9-sidecar-injector"
    spec:
      serviceAccountName: up9-service-account
      volumes:
      - name: secrets
        secret:
          secretName: up9-sidecar-injector
      containers:
      - name: "up9-sidecar-injector"
        imagePullPolicy: Always
        image: gcr.io/up9-docker-hub/sidecar-injector:v1
        command: ["entrypoint.sh"]
        args: []
        ports:
        - name: https
          containerPort: 9443
        - name: http-metrics
          containerPort: 9000
        volumeMounts:
        - name: secrets
          mountPath: /var/lib/secrets
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
---
# Source: up9/templates/injector.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: "up9-sidecar-injector-webhook"
  labels:
    app: up9-sidecar-injector
webhooks:
- name: "www.up9.com"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    service:
      name: "up9-sidecar-injector-prod"
      namespace: up9
      path: "/mutate"   # what /url/slug to send requests at
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUwRENDQXJpZ0F3SUJBZ0lKQVBkRDJYYmkwSVNsTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdGTVFzd0NRWUQKVlFRR0V3SlZVekVSTUE4R0ExVUVDQXdJVG1WM0lGbHZjbXN4RmpBVUJnTlZCQWNNRFU1bGR5QlpiM0pySUVOcApkSGt4RERBS0JnTlZCQW9NQTNWd09URWdNQjRHQTFVRUF3d1hkWEE1TFhOcFpHVmpZWEl0YVc1cVpXTjBiM0l0ClEwRXhHekFaQmdrcWhraUc5dzBCQ1FFV0RHNTFiR3hBZFhBNUxtTnZiVEFnRncweU1EQXhNekV4TkRFMk1UbGEKR0E4ME56VTNNVEl5TnpFME1UWXhPVm93V3pFTE1Ba0dBMVVFQmhNQ1ZWTXhFVEFQQmdOVkJBZ01DRTVsZHlCWgpiM0pyTVF3d0NnWU [...]
